RavenDB-15698 Server-wide backup view fix text alignment

--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -1969,6 +1969,12 @@ ul.properties {
     word-break: break-all;
 }
 
+.bg-info {
+    strong {
+        word-break: break-all;
+    }
+}
+
 @import "prism.less";
 @import "ace.less";
 @import "pages/tasks-sampleData";
